base/tools/istio/manifests/destination-rules.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule
metadata:
  name: allow-ingress-plaintext
  namespace: prod
spec:
  host: "*.prod.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
